--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,12 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+# Change prefix to match GNU-Screen
+unbind C-b
+set-option -g prefix C-a
+
+#set -g prefix2 C-a                        # GNU-Screen compatible prefix
+#bind C-a send-prefix -2
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
@@ -28,10 +32,10 @@ setw -q -g utf8 on
 set -g history-limit 5000                 # boost history
 
 # edit configuration
-bind e new-window -n "#{TMUX_CONF_LOCAL}" -e EDITOR="$EDITOR" sh -c 'case "${EDITOR:-vim}" in *vim*) ${EDITOR:-vim} -c ":set syntax=tmux" "$TMUX_CONF_LOCAL";; *) $EDITOR "$TMUX_CONF_LOCAL";; esac && "$TMUX_PROGRAM" ${TMUX_SOCKET:+-S "$TMUX_SOCKET"} source "$TMUX_CONF" \; display "$TMUX_CONF_LOCAL sourced"'
+# bind e new-window -n "#{TMUX_CONF_LOCAL}" -e EDITOR="$EDITOR" sh -c 'case "${EDITOR:-vim}" in *vim*) ${EDITOR:-vim} -c ":set syntax=tmux" "$TMUX_CONF_LOCAL";; *) $EDITOR "$TMUX_CONF_LOCAL";; esac && "$TMUX_PROGRAM" ${TMUX_SOCKET:+-S "$TMUX_SOCKET"} source "$TMUX_CONF" \; display "$TMUX_CONF_LOCAL sourced"'
 
 # reload configuration
-bind r run '"$TMUX_PROGRAM" ${TMUX_SOCKET:+-S "$TMUX_SOCKET"} source "$TMUX_CONF"' \; display "#{TMUX_CONF} sourced"
+# bind r run '"$TMUX_PROGRAM" ${TMUX_SOCKET:+-S "$TMUX_SOCKET"} source "$TMUX_CONF"' \; display "#{TMUX_CONF} sourced"
 
 
 # -- display -------------------------------------------------------------------
@@ -39,7 +43,7 @@ bind r run '"$TMUX_PROGRAM" ${TMUX_SOCKET:+-S "$TMUX_SOCKET"} source "$TMUX_CONF
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
-setw -g automatic-rename on   # rename window to reflect current program
+setw -g automatic-rename off  # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
 
 set -g set-titles on          # set terminal title
@@ -50,7 +54,7 @@ set -g display-time 1000      # slightly longer status messages display time
 set -g status-interval 10     # redraw status line every 10 seconds
 
 # clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
+#bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
 
 # activity
 set -g monitor-activity on
@@ -60,42 +64,43 @@ set -g visual-activity off
 # -- navigation ----------------------------------------------------------------
 
 # create session
-bind C-c new-session
+# bind C-c new-session
 
 # find session
-bind C-f command-prompt -p find-session 'switch-client -t %%'
+# bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # session navigation
-bind BTab switch-client -l  # move to last session
+# bind BTab switch-client -l  # move to last session
 
 # split current window horizontally
-bind - split-window -v
+# bind - split-window -v
 # split current window vertically
-bind _ split-window -h
+# bind _ split-window -h
 
 # pane navigation
+bind -r ^ last-window
 bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
-bind > swap-pane -D       # swap current pane with the next one
-bind < swap-pane -U       # swap current pane with the previous one
+# bind > swap-pane -D       # swap current pane with the next one
+# bind < swap-pane -U       # swap current pane with the previous one
 
 # maximize current pane
-bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
+# bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
 
 # pane resizing
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
+# bind -r H resize-pane -L 2
+# bind -r J resize-pane -D 2
+# bind -r K resize-pane -U 2
+# bind -r L resize-pane -R 2
 
 # window navigation
-unbind n
-unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
-bind Tab last-window        # move to last active window
+# unbind n
+# unbind p
+# bind -r C-h previous-window # select previous window
+# bind -r C-l next-window     # select next window
+# bind Tab last-window        # move to last active window
 
 # toggle mouse
 bind m run "cut -c3- '#{TMUX_CONF}' | sh -s _toggle_mouse"
@@ -103,37 +108,37 @@ bind m run "cut -c3- '#{TMUX_CONF}' | sh -s _toggle_mouse"
 
 # -- facebook pathpicker -------------------------------------------------------
 
-bind F run "cut -c3- '#{TMUX_CONF}' | sh -s _fpp '#{pane_id}' '#{pane_current_path}'"
+# bind F run "cut -c3- '#{TMUX_CONF}' | sh -s _fpp '#{pane_id}' '#{pane_current_path}'"
 
 
 # -- copy mode -----------------------------------------------------------------
 
-bind Enter copy-mode # enter copy mode
+# bind Enter copy-mode # enter copy mode
 
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi C-v send -X rectangle-toggle
-bind -T copy-mode-vi y send -X copy-selection-and-cancel
-bind -T copy-mode-vi Escape send -X cancel
-bind -T copy-mode-vi H send -X start-of-line
-bind -T copy-mode-vi L send -X end-of-line
+# bind -T copy-mode-vi v send -X begin-selection
+# bind -T copy-mode-vi C-v send -X rectangle-toggle
+# bind -T copy-mode-vi y send -X copy-selection-and-cancel
+# bind -T copy-mode-vi Escape send -X cancel
+# bind -T copy-mode-vi H send -X start-of-line
+# bind -T copy-mode-vi L send -X end-of-line
 
 # copy to X11 clipboard
-if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xsel -i -b"'
-if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xsel -i -b"'
+# if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
 # copy to Wayland clipboard
-if -b '[ "$XDG_SESSION_TYPE" = "wayland" ] && command -v wl-copy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | wl-copy"'
+# if -b '[ "$XDG_SESSION_TYPE" = "wayland" ] && command -v wl-copy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | wl-copy"'
 # copy to macOS clipboard
-if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | pbcopy"'
+# if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | pbcopy"'
 # copy to Windows clipboard
-if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | clip.exe"'
-if -b '[ -c /dev/clipboard ]' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - > /dev/clipboard"'
+# if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | clip.exe"'
+# if -b '[ -c /dev/clipboard ]' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - > /dev/clipboard"'
 
 
 # -- buffers -------------------------------------------------------------------
 
-bind b list-buffers     # list paste buffers
-bind p paste-buffer -p  # paste from the top paste buffer
-bind P choose-buffer    # choose which buffer to paste from
+# bind b list-buffers     # list paste buffers
+# bind p paste-buffer -p  # paste from the top paste buffer
+# bind P choose-buffer    # choose which buffer to paste from
 
 
 # -- 8< ------------------------------------------------------------------------
