Fix sessionizer and cht.sh shortcuts

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,11 @@ set -g history-limit 5000                 # boost history
 # reload configuration
 # bind r run '"$TMUX_PROGRAM" ${TMUX_SOCKET:+-S "$TMUX_SOCKET"} source "$TMUX_CONF"' \; display "#{TMUX_CONF} sourced"
 
+# tmux sessionizer
+bind-key -r f run-shell "tmux neww -n sessionizer tmux-sessionizer 1"
+
+# cheatsheet
+bind-key -r i run-shell "tmux neww -n cht.sh tmux-cht.sh"
 
 # -- display -------------------------------------------------------------------
 
