--- a/tmux.conf
+++ b/tmux.conf
@@ -21,10 +21,10 @@ set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
 # Change prefix to match GNU-Screen
-unbind C-b
-set-option -g prefix C-a
+#unbind C-b
+#set-option -g prefix C-a
 
-#set -g prefix2 C-a                        # GNU-Screen compatible prefix
+set -g prefix2 C-a                        # GNU-Screen compatible prefix
 #bind C-a send-prefix -2
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
