--- a/tmux.conf
+++ b/tmux.conf
@@ -49,7 +49,7 @@ bind-key -r i run-shell "tmux neww -n cht.sh tmux-cht.sh"
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
-setw -g automatic-rename off  # rename window to reflect current program
+setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
 
 set -g set-titles on          # set terminal title
