Add shortcuts for reordering windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,10 @@ bind-key -r f run-shell "tmux neww -n sessionizer tmux-sessionizer 1"
 # cheatsheet
 bind-key -r i run-shell "tmux neww -n cht.sh tmux-cht.sh"
 
+# shortcuts for reordering windows
+bind-key -r S-Left swap-window -t -1\; select-window -t -1
+bind-key -r S-Right swap-window -t +1\; select-window -t +1
+
 # -- display -------------------------------------------------------------------
 
 set -g base-index 1           # start windows numbering at 1
