--- a/tmux.conf
+++ b/tmux.conf
@@ -90,9 +90,9 @@ set -g visual-activity off
 # bind BTab switch-client -l  # move to last session
 
 # split current window horizontally
-# bind - split-window -v
+bind - split-window -v
 # split current window vertically
-# bind _ split-window -h
+bind _ split-window -h
 
 # pane navigation
 bind -r ^ last-window
@@ -100,17 +100,17 @@ bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
-# bind > swap-pane -D       # swap current pane with the next one
-# bind < swap-pane -U       # swap current pane with the previous one
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
 
 # maximize current pane
-# bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
+bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
 
 # pane resizing
-# bind -r H resize-pane -L 2
-# bind -r J resize-pane -D 2
-# bind -r K resize-pane -U 2
-# bind -r L resize-pane -R 2
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
 
 # window navigation
 unbind n
@@ -132,32 +132,32 @@ bind m run "cut -c3- '#{TMUX_CONF}' | sh -s _toggle_mouse"
 
 # -- copy mode -----------------------------------------------------------------
 
-# bind Enter copy-mode # enter copy mode
+bind Enter copy-mode # enter copy mode
 
-# bind -T copy-mode-vi v send -X begin-selection
-# bind -T copy-mode-vi C-v send -X rectangle-toggle
-# bind -T copy-mode-vi y send -X copy-selection-and-cancel
-# bind -T copy-mode-vi Escape send -X cancel
-# bind -T copy-mode-vi H send -X start-of-line
-# bind -T copy-mode-vi L send -X end-of-line
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi H send -X start-of-line
+bind -T copy-mode-vi L send -X end-of-line
 
 # copy to X11 clipboard
-# if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xsel -i -b"'
-# if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xsel -i -b"'
+if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
 # copy to Wayland clipboard
-# if -b '[ "$XDG_SESSION_TYPE" = "wayland" ] && command -v wl-copy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | wl-copy"'
+if -b '[ "$XDG_SESSION_TYPE" = "wayland" ] && command -v wl-copy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | wl-copy"'
 # copy to macOS clipboard
-# if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | pbcopy"'
+if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | pbcopy"'
 # copy to Windows clipboard
-# if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | clip.exe"'
-# if -b '[ -c /dev/clipboard ]' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - > /dev/clipboard"'
+if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - | clip.exe"'
+if -b '[ -c /dev/clipboard ]' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} save-buffer - > /dev/clipboard"'
 
 
 # -- buffers -------------------------------------------------------------------
 
-# bind b list-buffers     # list paste buffers
-# bind p paste-buffer -p  # paste from the top paste buffer
-# bind P choose-buffer    # choose which buffer to paste from
+bind b list-buffers     # list paste buffers
+bind p paste-buffer -p  # paste from the top paste buffer
+bind P choose-buffer    # choose which buffer to paste from
 
 
 # -- 8< ------------------------------------------------------------------------
